--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "./node_modules/ngx-toastr/toastr.css",
               "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
               "./node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
