--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@microsoft/signalr": "^6.0.9",
     "bootstrap-icons": "^1.9.1",
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.0.0",
